--- a/FarmaEnlace/FarmaEnlace.iOS/Info.plist
+++ b/FarmaEnlace/FarmaEnlace.iOS/Info.plist
@@ -22,26 +22,28 @@
 	<array>
 		<string>comgooglemaps</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>Para continuar, permite que la aplicación utilice la camara</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Para continuar, permite que la aplicación utilice el micrófono</string>
-	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>Para continuar, permite que la aplicación utilice el micrófono</string>
-	<key>NSSiriUsageDescription</key>
-	<string>Para continuar, permite que la aplicación utilice el micrófono</string>
+  <key>NSCameraUsageDescription</key>
+  <string>Tu App Farmacia desea utilizar su cámara para obtener el código de barras de aquellos productos que desea buscar. Su información no será compartida sin su autorización.</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>Tu App Farmacia desea utilizar su micrófono para buscar productos mediante reconocimiento de voz. Su información no será guardada. Es seguro</string>
+  <key>NSSpeechRecognitionUsageDescription</key>
+  <string>Tu App Farmacia desea utilizar el reconocimiento de voz para buscar los productos que desee de una manera sencilla. Su información no será guardada. Es seguro.</string>
+  <key>NSSiriUsageDescription</key>
+  <string>Tu App Farmacia desea utilizar Siri para buscar productos mediante reconocimiento de voz. Su información no será guardada. Es seguro.</string>
 	<key>MinimumOSVersion</key>
-	<string>8.0</string>
+	<string>9.0</string>
 	<key>CFBundleDisplayName</key>
 	<string>Tu App Farmacia</string>
 	<key>CFBundleVersion</key>
-	<string>1.65</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Para continuar, permite que tu dispositivo active la ubicación, que se usa en el servicio de ubicación.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Para continuar, permite que tu dispositivo active la ubicación, que se usa en el servicio de ubicación.</string>
-	<key>NSCalendarsUsageDescription</key>
-	<string>Para continuar, permite que la app acceda al calendario</string>
+	<string>1.78</string>
+  <key>NSLocationWhenInUseUsageDescription</key>
+  <string>Tu App Farmacia desea utilizar su ubicación actual para mostrarla en la aplicación, también para obtener farmacias cercanas y estimar los tiempos de viaje. Es seguro y privado.</string>
+  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>Tu App Farmacia desea utilizar su ubicación actual para mostrarla en la aplicación, también para obtener farmacias cercanas y estimar los tiempos de viaje. Es seguro y privado.</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>Tu App Farmacia desea utilizar su ubicación actual para mostrarla en la aplicación, también para obtener farmacias cercanas y estimar los tiempos de viaje. Es seguro y privado.</string>
+  <key>NSCalendarsUsageDescription</key>
+  <string>Tu App Farmacia desea utilizar su calendario para planificar las visitas a nuestras farmacias con el fin de separar su turno. Esta infomación no será compartida.</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>CFBundleIconName</key>
