--- a/FarmaEnlace/FarmaEnlace.Android/Properties/AndroidManifest.xml
+++ b/FarmaEnlace/FarmaEnlace.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:debuggable="true" installLocation="auto" package="com.Tandicorp.FarmaEnlace" android:installLocation="auto" android:versionName="Version 55" android:versionCode="55">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:debuggable="true" installLocation="auto" package="com.Tandicorp.FarmaEnlace" android:installLocation="preferExternal" android:versionName="Version 72" android:versionCode="72">
 	<uses-sdk android:minSdkVersion="22" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
