--- a/FarmaEnlace/FarmaEnlace.iOS/FarmaEnlace.iOS.csproj
+++ b/FarmaEnlace/FarmaEnlace.iOS/FarmaEnlace.iOS.csproj
@@ -213,6 +213,9 @@
     <PackageReference Include="SQLiteNetExtensions">
       <Version>2.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Geolocator">
+      <Version>4.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.3.6</Version>
     </PackageReference>
