--- a/FarmaEnlace/FarmaEnlace.iOS/Info.plist
+++ b/FarmaEnlace/FarmaEnlace.iOS/Info.plist
@@ -35,7 +35,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Tu App Farmacia</string>
 	<key>CFBundleVersion</key>
-	<string>1.80</string>
+	<string>1.81</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Tu App Farmacia desea utilizar su ubicación actual para mostrarla en la aplicación, también para obtener farmacias cercanas y estimar los tiempos de viaje. Es seguro y privado.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
@@ -44,6 +44,10 @@
 	<string>Tu App Farmacia desea utilizar su ubicación actual para mostrarla en la aplicación, también para obtener farmacias cercanas y estimar los tiempos de viaje. Es seguro y privado.</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Tu App Farmacia desea utilizar su calendario para planificar las visitas a nuestras farmacias con el fin de separar su turno. Esta infomación no será compartida.</string>
+  <key>NSContactsUsageDescription</key>
+  <string>Tu App Farmacia debe acceder a sus contactos para notificar de promociones y productos vigentes.</string>
+  <key>NSAppleMusicUsageDescription</key>
+  <string>Tu App Farmacia necesita acceder a los servicios de Música para ser mostrada en la tienda.</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>CFBundleIconName</key>
