--- a/FarmaEnlace/FarmaEnlace.iOS/FarmaEnlace.iOS.csproj
+++ b/FarmaEnlace/FarmaEnlace.iOS/FarmaEnlace.iOS.csproj
@@ -54,7 +54,7 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
     <MtouchArch>ARMv7, ARM64</MtouchArch>
-    <CodesignKey>iPhone Developer: Jorge Ortiz (TATD3DV2BB)</CodesignKey>
+    <CodesignKey>iPhone Distribution: Farmaenlace Cia. Ltda. (9447VZDGRS)</CodesignKey>
     <MtouchDebug>true</MtouchDebug>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <CodesignProvision>Tu App Farmacia</CodesignProvision>
@@ -63,6 +63,7 @@
     <MtouchFastDev>false</MtouchFastDev>
     <OptimizePNGs>true</OptimizePNGs>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
+    <BuildIpa>true</BuildIpa>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
